# ai-agents

./: README.md
browser-use/: main.py  pyproject.toml
langgraph/: README.md  pyproject.toml
langgraph-react/: .env.example  pyproject.toml
langgraph-react/notebooks/: README.md  langgraph-multi-agent.ipynb  langgraph-prebuilt.ipynb
langgraph-react/src/react_agent/: configuration.py  graph.py
langgraph/src/: basic_agent.py
