[project]
name = "react-agent"
version = "0.1.0"
description = "A project to explore LangGraph and agent development"
authors = [
    { name = "Shashank Boosi", email = "shashank1872@gmail.com" },
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12,<4.0"
dependencies = [
    "langgraph>=0.4.1",
    "langchain-openai>=0.3.16",
    "langchain-anthropic>=0.3.12",
    "langchain>=0.3.25",
    "python-dotenv>=1.1.0",
    "langchain-tavily>=0.1.6",
]


[project.optional-dependencies]
dev = [
    "mypy>=1.15.0",
    "ruff>=0.11.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/react_agent"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv]
python-preference = "managed"
resolution = "highest"

[tool.ruff]
lint.select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "D",    # pydocstyle
    "D401", # First line should be in imperative mood
    "T201",
    "UP",
]
lint.ignore = [
    "UP006",
    "UP007",
    # We actually do want to import from typing_extensions
    "UP035",
    # Relax the convention by _not_ requiring documentation for every function parameter.
    "D417",
    "E501",
]
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "UP"]
[tool.ruff.lint.pydocstyle]
convention = "google"

[dependency-groups]
dev = [
    "langgraph-cli[inmem]>=0.2.8",
    "pytest>=8.3.5",
]
