[project]
name = "langgraph-agents"
version = "0.1.0"
license = { text = "MIT" }
description = "A project to explore LangGraph and agent development"
authors = [
    {name = "shashankboosi",email = "shashank1872@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic (>=2.11.4,<3.0.0)",
    "langchain (>=0.3.24,<0.4.0)",
    "langchain-openai (>=0.3.15,<0.4.0)",
    "langgraph (>=0.4.1,<0.5.0)",
    "python-dotenv (>=1.1.0,<2.0.0)"
]

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<4.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
